@@ -19,16 +19,14 @@
 package org.apache.cxf.tools.wadlto.jaxrs;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
 import java.io.Reader;
-import java.io.StringReader;
 import java.io.Writer;
 import java.net.URI;
 import java.net.URL;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
@@ -37,7 +35,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -54,6 +51,7 @@ import javax.ws.rs.HEAD;
 import javax.ws.rs.HeaderParam;
 import javax.ws.rs.MatrixParam;
 import javax.ws.rs.OPTIONS;
+import javax.ws.rs.PATCH;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
@@ -94,7 +92,6 @@ import org.apache.cxf.common.util.ReflectionInvokationHandler;
 import org.apache.cxf.common.util.StringUtils;
 import org.apache.cxf.common.util.SystemPropertyAction;
 import org.apache.cxf.common.xmlschema.SchemaCollection;
-import org.apache.cxf.helpers.CastUtils;
 import org.apache.cxf.helpers.DOMUtils;
 import org.apache.cxf.helpers.JavaUtils;
 import org.apache.cxf.jaxrs.ext.Oneway;
@@ -114,7 +111,6 @@ public class SourceGenerator {
     public static final String CODE_TYPE_PROXY = "proxy";
     public static final String CODE_TYPE_WEB = "web";
     public static final String LINE_SEP_PROPERTY = "line.separator";
-    public static final String FILE_SEP_PROPERTY = "file.separator";
 
     private static final Logger LOG = LogUtils.getL7dLogger(SourceGenerator.class);
 
@@ -122,43 +118,34 @@ public class SourceGenerator {
     private static final String DEFAULT_RESOURCE_NAME = "Resource";
     private static final String TAB = "    ";
 
-    private static final List<String> HTTP_OK_STATUSES =
-            Arrays.asList(new String[] {"200", "201", "202", "203", "204"});
+    private static final Set<String> HTTP_OK_STATUSES =
+        new HashSet<>(Arrays.asList("200", "201", "202", "203", "204"));
 
     private static final Set<Class<?>> OPTIONAL_PARAMS =
-        new HashSet<Class<?>>(Arrays.<Class<?>>asList(QueryParam.class,
-                                                      HeaderParam.class,
-                                                      MatrixParam.class,
-                                                      FormParam.class));
-    private static final Map<String, Class<?>> HTTP_METHOD_ANNOTATIONS;
-    private static final Map<String, Class<?>> PARAM_ANNOTATIONS;
+        new HashSet<>(Arrays.asList(QueryParam.class, HeaderParam.class, MatrixParam.class, FormParam.class));
+    private static final Map<String, Class<?>> HTTP_METHOD_ANNOTATIONS = new HashMap<>();
+    private static final Map<String, Class<?>> PARAM_ANNOTATIONS = new HashMap<>();
     private static final String PLAIN_PARAM_STYLE = "plain";
     private static final String BEAN_VALID_SIMPLE_NAME = "Valid";
     private static final String BEAN_VALID_FULL_NAME = "javax.validation." + BEAN_VALID_SIMPLE_NAME;
-    private static final Set<String> RESOURCE_LEVEL_PARAMS;
-    private static final Map<String, String> AUTOBOXED_PRIMITIVES_MAP;
-    private static final Map<String, String> XSD_SPECIFIC_TYPE_MAP;
+    private static final Set<String> RESOURCE_LEVEL_PARAMS = new HashSet<>(Arrays.asList("template", "matrix"));
+    private static final Map<String, String> AUTOBOXED_PRIMITIVES_MAP = new HashMap<>();
+    private static final Map<String, String> XSD_SPECIFIC_TYPE_MAP = new HashMap<>();
 
     static {
-        HTTP_METHOD_ANNOTATIONS = new HashMap<>();
         HTTP_METHOD_ANNOTATIONS.put("get", GET.class);
         HTTP_METHOD_ANNOTATIONS.put("put", PUT.class);
         HTTP_METHOD_ANNOTATIONS.put("post", POST.class);
         HTTP_METHOD_ANNOTATIONS.put("delete", DELETE.class);
         HTTP_METHOD_ANNOTATIONS.put("head", HEAD.class);
         HTTP_METHOD_ANNOTATIONS.put("options", OPTIONS.class);
+        HTTP_METHOD_ANNOTATIONS.put("patch", PATCH.class);
 
-        PARAM_ANNOTATIONS = new HashMap<>();
         PARAM_ANNOTATIONS.put("template", PathParam.class);
         PARAM_ANNOTATIONS.put("header", HeaderParam.class);
         PARAM_ANNOTATIONS.put("query", QueryParam.class);
         PARAM_ANNOTATIONS.put("matrix", MatrixParam.class);
 
-        RESOURCE_LEVEL_PARAMS = new HashSet<>();
-        RESOURCE_LEVEL_PARAMS.add("template");
-        RESOURCE_LEVEL_PARAMS.add("matrix");
-
-        AUTOBOXED_PRIMITIVES_MAP = new HashMap<>();
         AUTOBOXED_PRIMITIVES_MAP.put(byte.class.getSimpleName(), Byte.class.getSimpleName());
         AUTOBOXED_PRIMITIVES_MAP.put(short.class.getSimpleName(), Short.class.getSimpleName());
         AUTOBOXED_PRIMITIVES_MAP.put(int.class.getSimpleName(), Integer.class.getSimpleName());
@@ -167,7 +154,6 @@ public class SourceGenerator {
         AUTOBOXED_PRIMITIVES_MAP.put(double.class.getSimpleName(), Double.class.getSimpleName());
         AUTOBOXED_PRIMITIVES_MAP.put(boolean.class.getSimpleName(), Boolean.class.getSimpleName());
 
-        XSD_SPECIFIC_TYPE_MAP = new HashMap<>();
         XSD_SPECIFIC_TYPE_MAP.put("string", "String");
         XSD_SPECIFIC_TYPE_MAP.put("integer", "long");
         XSD_SPECIFIC_TYPE_MAP.put("float", "float");
@@ -205,7 +191,7 @@ public class SourceGenerator {
     private boolean useVoidForEmptyResponses = true;
     private boolean generateResponseIfHeadersSet;
 
-    private Map<String, String> properties;
+    private final String lineSeparator;
 
     private List<String> generatedServiceClasses = new ArrayList<>();
     private List<String> generatedTypeClasses = new ArrayList<>();
@@ -228,13 +214,17 @@ public class SourceGenerator {
     private String authentication;
     private boolean createJavaDocs;
     private String jaxbClassNameSuffix;
+    private String rx;
+    private ResponseWrapper responseWrapper;
 
     public SourceGenerator() {
-        this(Collections.<String, String>emptyMap());
+        this(Collections.emptyMap());
     }
 
     public SourceGenerator(Map<String, String> properties) {
-        this.properties = properties;
+        String value = properties.get(LINE_SEP_PROPERTY);
+        lineSeparator = value == null ? SystemPropertyAction.getProperty(LINE_SEP_PROPERTY) : value;
+        responseWrapper = ResponseWrapper.create(rx);
     }
 
     public void setSupportMultipleXmlReps(boolean support) {
@@ -280,25 +270,15 @@ public class SourceGenerator {
     private String getClassPackageName(String wadlPackageName) {
         if (resourcePackageName != null) {
             return resourcePackageName;
-        } else if (wadlPackageName != null && wadlPackageName.length() > 0) {
+        } else if (wadlPackageName != null && !wadlPackageName.isEmpty()) {
             return wadlPackageName;
         } else {
             return DEFAULT_PACKAGE_NAME;
         }
     }
 
-    private String getLineSep() {
-        String value = properties.get(LINE_SEP_PROPERTY);
-        return value == null ? SystemPropertyAction.getProperty(LINE_SEP_PROPERTY) : value;
-    }
-
-    private String getFileSep() {
-        String value = properties.get(FILE_SEP_PROPERTY);
-        return value == null ? SystemPropertyAction.getProperty(FILE_SEP_PROPERTY) : value;
-    }
-
-    public void generateSource(String wadl, File srcDir, String codeType) {
-        Application app = readWadl(wadl, wadlPath);
+    public void generateSource(File srcDir, String codeType) {
+        Application app = readWadl();
         Set<String> typeClassNames = new HashSet<>();
         GrammarInfo gInfo = generateSchemaCodeAndInfo(app, typeClassNames, srcDir);
         if (!CODE_TYPE_GRAMMAR.equals(codeType)) {
@@ -356,7 +336,7 @@ public class SourceGenerator {
     private Element getResourceElement(Application app, Element resElement,
                                        GrammarInfo gInfo, Set<String> typeClassNames,
                                        String type, File srcDir) {
-        if (type.length() > 0) {
+        if (!type.isEmpty()) {
             if (type.startsWith("#")) {
                 Element resourceType = resolveLocalReference(app.getAppElement(), "resource_type", type);
                 if (resourceType != null) {
@@ -369,8 +349,7 @@ public class SourceGenerator {
                 URI wadlRef = URI.create(type);
                 String wadlRefPath = app.getWadlPath() != null
                     ? getBaseWadlPath(app.getWadlPath()) + wadlRef.getPath() : wadlRef.getPath();
-                Application refApp = new Application(readIncludedDocument(wadlRefPath),
-                                                     wadlRefPath);
+                Application refApp = new Application(readDocument(wadlRefPath), wadlRefPath);
                 GrammarInfo gInfoBase = generateSchemaCodeAndInfo(refApp, typeClassNames, srcDir);
                 if (gInfoBase != null) {
                     gInfo.getElementTypeMap().putAll(gInfoBase.getElementTypeMap());
@@ -386,7 +365,7 @@ public class SourceGenerator {
 
     private Element getWadlElement(Element wadlEl) {
         String href = wadlEl.getAttribute("href");
-        if (href.length() > 0 && href.startsWith("#")) {
+        if (href.startsWith("#")) {
             return resolveLocalReference(wadlEl.getOwnerDocument().getDocumentElement(),
                                          wadlEl.getLocalName(), href);
         }
@@ -435,7 +414,7 @@ public class SourceGenerator {
                                                                 Constants.URI_2001_SCHEMA_XSD, "element");
         for (Element el : elementEls) {
             String type = el.getAttribute("type");
-            if (type.length() > 0) {
+            if (!type.isEmpty()) {
                 elementTypeMap.put(el.getAttribute("name"), type);
             }
         }
@@ -445,7 +424,7 @@ public class SourceGenerator {
             int ind = systemId.lastIndexOf('/');
             if (ind != -1) {
                 String schemaURI = systemId.substring(0, ind + 1) + includeEl.getAttribute("schemaLocation");
-                populateElementTypeMap(app, readIncludedDocument(schemaURI), schemaURI, elementTypeMap);
+                populateElementTypeMap(app, readDocument(schemaURI), schemaURI, elementTypeMap);
             }
         }
     }
@@ -459,15 +438,15 @@ public class SourceGenerator {
                                     boolean isRoot) {
         String resourceId = resourceName != null
             ? resourceName : rElement.getAttribute("id");
-        if (resourceId.length() == 0) {
+        if (resourceId.isEmpty()) {
             String path = rElement.getAttribute("path");
-            if (path.length() > 0) {
+            if (!path.isEmpty()) {
                 path = path.replaceAll("[\\{\\}_]*", "");
                 String[] split = path.split("/");
                 StringBuilder builder = new StringBuilder(resourceId);
                 for (int i = 0; i < split.length; i++) {
-                    if (split[i].length() > 0) {
-                        builder.append(split[i].toUpperCase().charAt(0)).append(split[i].substring(1));
+                    if (!split[i].isEmpty()) {
+                        builder.append(StringUtils.capitalize(split[i]));
                     }
                 }
                 resourceId = builder.toString();
@@ -484,7 +463,6 @@ public class SourceGenerator {
             return;
         }
 
-
         final String className = getClassName(qname.getLocalPart(),
                 info.isInterfaceGenerated(), info.getTypeClassNames());
         if (info.getResourceClassNames().contains(className)) {
@@ -493,26 +471,23 @@ public class SourceGenerator {
         info.getResourceClassNames().add(className);
         final String classPackage = getClassPackageName(namespaceURI);
 
-        StringBuilder sbImports = new StringBuilder();
         StringBuilder sbCode = new StringBuilder();
         Set<String> imports = createImports();
 
 
-        sbImports.append(getClassComment()).append(getLineSep());
-        sbImports.append("package ").append(classPackage)
-            .append(';').append(getLineSep()).append(getLineSep());
         boolean doCreateJavaDocs = isJavaDocNeeded(info);
         if (doCreateJavaDocs) {
             writeClassDocs(rElement, sbCode);
         }
         if (isRoot && writeAnnotations(info.isInterfaceGenerated())) {
             String path = rElement.getAttribute("path");
-            writeAnnotation(sbCode, imports, Path.class, path, true, false);
+            writeAnnotation(sbCode, imports, Path.class, path)
+                .append(lineSeparator);
         }
 
         sbCode.append("public ").append(getClassType(info.interfaceIsGenerated)).append(' ').append(className);
         writeImplementsInterface(sbCode, qname.getLocalPart(), info.isInterfaceGenerated());
-        sbCode.append(" {").append(getLineSep()).append(getLineSep());
+        sbCode.append(" {").append(lineSeparator).append(lineSeparator);
 
         Map<String, Integer> methodNameMap = new HashMap<>();
         writeMethods(rElement, classPackage, imports, sbCode,
@@ -520,9 +495,8 @@ public class SourceGenerator {
                      methodNameMap);
 
         sbCode.append('}');
-        writeImports(sbImports, imports, classPackage);
 
-        createJavaSourceFile(info.getSrcDir(), new QName(classPackage, className), sbCode, sbImports, true);
+        createJavaSourceFile(info.getSrcDir(), classPackage, className, sbCode, imports, true);
 
         writeSubresourceClasses(rElement, info, isRoot, resourceId);
     }
@@ -533,7 +507,7 @@ public class SourceGenerator {
         List<Element> childEls = getWadlElements(rElement, "resource");
         for (Element subEl : childEls) {
             String id = subEl.getAttribute("id");
-            if (id.length() > 0 && !resourceId.equals(id) && !id.startsWith("{java")
+            if (!id.isEmpty() && !resourceId.equals(id) && !id.startsWith("{java")
                 && !id.startsWith("java")) {
                 Element subElement = getResourceElement(info.getApp(), subEl, info.getGrammarInfo(),
                     info.getTypeClassNames(), subEl.getAttribute("type"), info.getSrcDir());
@@ -567,27 +541,12 @@ public class SourceGenerator {
         } else {
             name = generateInterfaces ? clsName + "Impl" : clsName;
         }
-        name = firstCharToUpperCase(name);
+        name = StringUtils.capitalize(name);
         for (String typeName : typeClassNames) {
-            String localName = typeName.contains(".")
-                ? typeName.substring(typeName.lastIndexOf('.') + 1) : typeName;
+            String localName = typeName.substring(typeName.lastIndexOf('.') + 1);
             if (name.equalsIgnoreCase(localName)) {
                 name += "Resource";
             }
-        }
-        return name;
-    }
-
-    private String firstCharToUpperCase(String name) {
-        if (name.length() > 0 && Character.isLowerCase(name.charAt(0))) {
-            return StringUtils.capitalize(name);
-        }
-        return name;
-    }
-
-    private String firstCharToLowerCase(String name) {
-        if (name.length() > 0 && Character.isUpperCase(name.charAt(0))) {
-            return StringUtils.uncapitalize(name);
         }
         return name;
     }
@@ -608,10 +567,10 @@ public class SourceGenerator {
 
     private String getClassComment() {
         return "/**"
-            + getLineSep() + " * Created by Apache CXF WadlToJava code generator"
-            + getLineSep() + "**/";
+            + lineSeparator + " * Created by Apache CXF WadlToJava code generator"
+            + lineSeparator + "**/";
     }
-    //CHECKSTYLE:OFF
+    //CHECKSTYLE:OFF: ParameterNumber
     private void writeMethods(Element rElement,
                               String classPackage,
                               Set<String> imports,
@@ -621,11 +580,11 @@ public class SourceGenerator {
                               boolean isRoot,
                               String currentPath,
                               Map<String, Integer> methodNameMap) {
-    //CHECKSTYLE:ON
+    //CHECKSTYLE:ON: ParameterNumber
         List<Element> methodEls = getWadlElements(rElement, "method");
 
         List<Element> currentInheritedParams = inheritResourceParams
-            ? new LinkedList<Element>(info.getInheritedParams()) : Collections.<Element>emptyList();
+            ? new ArrayList<Element>(info.getInheritedParams()) : Collections.emptyList();
         for (Element methodEl : methodEls) {
             writeResourceMethod(methodEl, classPackage, imports, sbCode, info, isRoot, currentPath, methodNameMap);
         }
@@ -641,7 +600,7 @@ public class SourceGenerator {
             }
             String newPath = currentPath + path.replace("//", "/");
             String id = childEl.getAttribute("id");
-            if (id.length() == 0) {
+            if (id.isEmpty()) {
                 writeMethods(childEl, classPackage, imports, sbCode, info, id, false, newPath, methodNameMap);
             } else {
                 writeResourceMethod(childEl, classPackage, imports, sbCode, info, false, newPath, methodNameMap);
@@ -651,44 +610,25 @@ public class SourceGenerator {
         info.getInheritedParams().addAll(currentInheritedParams);
     }
 
-    private void writeAnnotation(StringBuilder sbCode, Set<String> imports,
-                                 Class<?> cls, String value, boolean nextLine, boolean addTab) {
-        if (value != null && value.length() == 0) {
-            return;
-        }
-        addImport(imports, cls.getName());
-        sbCode.append('@').append(cls.getSimpleName());
-        if (value != null) {
-            sbCode.append("(\"").append(value).append("\")");
-        }
-        if (nextLine) {
-            sbCode.append(getLineSep());
-            if (addTab) {
-                sbCode.append(TAB);
+    private StringBuilder writeAnnotation(StringBuilder sbCode, Set<String> imports, Class<?> cls, String value) {
+        if (value == null || !value.isEmpty()) {
+            addImport(imports, cls.getName());
+            sbCode.append('@').append(cls.getSimpleName());
+            if (value != null) {
+                sbCode.append("(\"").append(value).append("\")");
             }
         }
+        return sbCode;
     }
 
     private void addImport(Set<String> imports, String clsName) {
         if (imports == null || clsName.startsWith("java.lang") || !clsName.contains(".")) {
             return;
         }
-        if (!imports.contains(clsName)) {
-            imports.add(clsName);
-        }
+        imports.add(clsName);
     }
 
-    private void writeImports(StringBuilder sbImports, Set<String> imports, String classPackage) {
-        for (String clsName : imports) {
-            int index = clsName.lastIndexOf('.');
-            if (index != -1 && clsName.substring(0, index).equals(classPackage)) {
-                continue;
-            }
-            sbImports.append("import ").append(clsName).append(';').append(getLineSep());
-        }
-    }
-
-    //CHECKSTYLE:OFF
+    //CHECKSTYLE:OFF: ParameterNumber
     private void writeResourceMethod(Element methodEl,
                                      String classPackage,
                                      Set<String> imports,
@@ -697,7 +637,7 @@ public class SourceGenerator {
                                      boolean isRoot,
                                      String currentPath,
                                      Map<String, Integer> methodNameMap) {
-    //CHECKSTYLE:ON
+    //CHECKSTYLE:ON: ParameterNumber
         StringBuilder sbMethodCode = sbCode;
         StringBuilder sbMethodDocs = null;
         StringBuilder sbMethodRespDocs = null;
@@ -716,7 +656,7 @@ public class SourceGenerator {
         List<Element> requestEls = getWadlElements(methodEl, "request");
         Element firstRequestEl = !requestEls.isEmpty() ? requestEls.get(0) : null;
         List<Element> allRequestReps = getWadlElements(firstRequestEl, "representation");
-        List<Element> requestRepsWithElements = new LinkedList<>();
+        List<Element> requestRepsWithElements = new ArrayList<>();
         boolean duplicatesAvailable =
             getRepsWithElements(allRequestReps, requestRepsWithElements, info.getGrammarInfo());
 
@@ -761,10 +701,10 @@ public class SourceGenerator {
             if (writeAnnotations(info.isInterfaceGenerated())) {
                 sbMethodCode.append(TAB);
 
-                if (methodNameLowerCase.length() > 0) {
+                if (!methodNameLowerCase.isEmpty()) {
                     if (HTTP_METHOD_ANNOTATIONS.containsKey(methodNameLowerCase)) {
-                        writeAnnotation(sbMethodCode, imports,
-                                        HTTP_METHOD_ANNOTATIONS.get(methodNameLowerCase), null, true, true);
+                        writeAnnotation(sbMethodCode, imports, HTTP_METHOD_ANNOTATIONS.get(methodNameLowerCase), null)
+                            .append(lineSeparator).append(TAB);
                     } else {
                         writeCustomHttpMethod(info, classPackage, methodName, sbMethodCode, imports);
                     }
@@ -775,18 +715,19 @@ public class SourceGenerator {
                     if (supportBeanValidation && !responseRequired
                         && isRepWithElementAvailable(responseReps, info.getGrammarInfo())) {
                         addImport(imports, BEAN_VALID_FULL_NAME);
-                        sbMethodCode.append('@').append(BEAN_VALID_SIMPLE_NAME).append(getLineSep()).append(TAB);
+                        sbMethodCode.append('@').append(BEAN_VALID_SIMPLE_NAME).append(lineSeparator).append(TAB);
                     }
                     if (oneway) {
-                        addImport(imports, Oneway.class.getName());
-                        sbMethodCode.append('@').append(Oneway.class.getSimpleName()).append(getLineSep()).append(TAB);
+                        writeAnnotation(sbMethodCode, imports, Oneway.class, null)
+                            .append(lineSeparator).append(TAB);
                     }
                 }
                 if (!isRoot && !"/".equals(currentPath)) {
-                    writeAnnotation(sbMethodCode, imports, Path.class, currentPath, true, true);
+                    writeAnnotation(sbMethodCode, imports, Path.class, currentPath)
+                        .append(lineSeparator).append(TAB);
                 }
             } else {
-                sbMethodCode.append(getLineSep()).append(TAB);
+                sbMethodCode.append(lineSeparator).append(TAB);
             }
 
             if (!info.isInterfaceGenerated()) {
@@ -794,7 +735,7 @@ public class SourceGenerator {
             }
             boolean responseTypeAvailable = true;
 
-            if (methodNameLowerCase.length() > 0) {
+            if (!methodNameLowerCase.isEmpty()) {
                 responseTypeAvailable = writeResponseType(responseEls,
                                                           requestRepWithElement,
                                                           sbMethodCode,
@@ -816,7 +757,7 @@ public class SourceGenerator {
                         }
                         sb.append(pathSeg);
                     }
-                    genMethodName += firstCharToUpperCase(sb.toString());
+                    genMethodName += StringUtils.capitalize(sb.toString());
                 }
                 genMethodName = genMethodName.replace("-", "");
 
@@ -837,7 +778,7 @@ public class SourceGenerator {
             sbMethodCode.append('(');
 
             List<Element> inParamElements = getParameters(resourceEl, info.getInheritedParams(),
-                        !isRoot && !isResourceElement && resourceEl.getAttribute("id").length() > 0);
+                        !isRoot && !isResourceElement && !resourceEl.getAttribute("id").isEmpty());
 
             Element repElement = getActualRepElement(allRequestReps, requestRepWithElement);
             writeRequestTypes(firstRequestEl, classPackage, repElement, inParamElements,
@@ -851,7 +792,7 @@ public class SourceGenerator {
             } else {
                 generateEmptyMethodBody(sbMethodCode, responseTypeAvailable);
             }
-            sbMethodCode.append(getLineSep()).append(getLineSep());
+            sbMethodCode.append(lineSeparator).append(lineSeparator);
         }
         finalizeMethodDocs(doCreateJavaDocs, sbCode, sbMethodDocs, sbMethodRespDocs, sbMethodCode);
 
@@ -880,20 +821,20 @@ public class SourceGenerator {
         if (tab) {
             sbDoc.append(TAB);
         }
-        sbDoc.append("/**").append(getLineSep());
+        sbDoc.append("/**").append(lineSeparator);
         if (tab) {
             sbDoc.append(TAB);
         }
     }
 
     private void closeJavaDocs(StringBuilder sbDoc) {
-        sbDoc.append(" */").append(getLineSep());
+        sbDoc.append(" */").append(lineSeparator);
     }
     private void writeClassDocs(Element resourceEl, StringBuilder sbDoc) {
         String text = getDocText(resourceEl);
         if (text != null) {
             openJavaDocs(sbDoc, false);
-            sbDoc.append(" * ").append(text).append(getLineSep());
+            sbDoc.append(" * ").append(text).append(lineSeparator);
             closeJavaDocs(sbDoc);
         }
     }
@@ -901,7 +842,7 @@ public class SourceGenerator {
         StringBuilder sbDoc = new StringBuilder();
         String text = getDocText(methodEl);
         if (text != null) {
-            sbDoc.append(" * ").append(text).append(getLineSep()).append(TAB);
+            sbDoc.append(" * ").append(text).append(lineSeparator).append(TAB);
         }
         return sbDoc;
     }
@@ -910,21 +851,21 @@ public class SourceGenerator {
         String text = getDocText(paramEl);
         if (text != null) {
             sbDoc.append(" * @param ").append(name).append(' ').append(text)
-                .append(getLineSep()).append(TAB);
+                .append(lineSeparator).append(TAB);
         }
     }
 
     private void writeMethodThrowsDocs(Element paramEl, String name, StringBuilder sbDoc) {
         String text = getDocText(paramEl);
         if (text != null) {
-            sbDoc.append(" * @throws ").append(name).append(' ').append(text).append(getLineSep()).append(TAB);
+            sbDoc.append(" * @throws ").append(name).append(' ').append(text).append(lineSeparator).append(TAB);
         }
     }
 
     private void writeMethodResponseDocs(Element responseEl, StringBuilder sbDoc) {
         String text = getDocText(responseEl);
         if (text != null) {
-            sbDoc.append(" * @return ").append(text).append(getLineSep()).append(TAB);
+            sbDoc.append(" * @return ").append(text).append(lineSeparator).append(TAB);
         }
     }
 
@@ -943,7 +884,7 @@ public class SourceGenerator {
                                        Set<String> mainImports) {
 
         mainCode.append('@').append(methodName);
-        mainCode.append(getLineSep());
+        mainCode.append(lineSeparator);
         mainCode.append(TAB);
 
         final String className = methodName;
@@ -952,27 +893,16 @@ public class SourceGenerator {
         }
         info.getResourceClassNames().add(className);
 
-
-        StringBuilder sbMethodClassImports = new StringBuilder(256);
-        sbMethodClassImports.append(getClassComment()).append(getLineSep());
-        sbMethodClassImports.append("package ").append(classPackage)
-            .append(';').append(getLineSep()).append(getLineSep());
-
-        sbMethodClassImports.append("import java.lang.annotation.ElementType;").append(getLineSep());
-        sbMethodClassImports.append("import java.lang.annotation.Retention;").append(getLineSep());
-        sbMethodClassImports.append("import java.lang.annotation.RetentionPolicy;").append(getLineSep());
-        sbMethodClassImports.append("import java.lang.annotation.Target;").append(getLineSep());
-        sbMethodClassImports.append("import javax.ws.rs.HttpMethod;").append(getLineSep());
-
-        StringBuilder sbMethodClassCode = new StringBuilder(256);
-        sbMethodClassCode.append("@Target({ElementType.METHOD })").append(getLineSep());
-        sbMethodClassCode.append("@Retention(RetentionPolicy.RUNTIME)").append(getLineSep());
-        sbMethodClassCode.append("@HttpMethod(\"").append(methodName).append("\")").append(getLineSep());
-        sbMethodClassCode.append("public @interface ").append(methodName);
-        sbMethodClassCode.append(" {").append(getLineSep()).append(getLineSep());
-        sbMethodClassCode.append('}');
-        createJavaSourceFile(info.getSrcDir(), new QName(classPackage, className),
-                             sbMethodClassCode, sbMethodClassImports, true);
+        StringBuilder sbMethodClassCode = new StringBuilder(256)
+            .append("@java.lang.annotation.Target({java.lang.annotation.ElementType.METHOD})").append(lineSeparator)
+            .append("@java.lang.annotation.Retention(java.lang.annotation.RetentionPolicy.RUNTIME)")
+            .append(lineSeparator)
+            .append("@javax.ws.rs.HttpMethod(\"").append(methodName).append("\")").append(lineSeparator)
+            .append("public @interface ").append(methodName)
+            .append(" {").append(lineSeparator).append(lineSeparator)
+            .append('}');
+        createJavaSourceFile(info.getSrcDir(), classPackage, className,
+                             sbMethodClassCode, Collections.emptySet(), true);
     }
 
     private void writeSubresourceMethod(Element resourceEl,
@@ -1019,7 +949,7 @@ public class SourceGenerator {
         Set<String> elementRefs = new HashSet<>();
         for (Element el : repElements) {
             String value = el.getAttribute("element");
-            if (value.length() > 0
+            if (!value.isEmpty()
                 && (value.contains(":") || gInfo.isSchemaWithoutTargetNamespace())) {
                 requestRepsWithElements.add(el);
                 if (!elementRefs.add(value)) {
@@ -1037,7 +967,7 @@ public class SourceGenerator {
                                               GrammarInfo gInfo) {
         for (Element el : repElements) {
             String value = el.getAttribute("element");
-            if (value.length() > 0
+            if (!value.isEmpty()
                 && (value.contains(":") || gInfo.isSchemaWithoutTargetNamespace())) {
                 return true;
             }
@@ -1047,10 +977,9 @@ public class SourceGenerator {
 
     private List<Element> getParameters(Element resourceEl, List<Element> inheritedParams,
                                         boolean isSubresourceMethod) {
-        List<Element> inParamElements = new LinkedList<>();
+        List<Element> inParamElements = new ArrayList<>();
         List<Element> allParamElements = getWadlElements(resourceEl, "param");
-        List<Element> newInheritedParams = inheritResourceParams ? new LinkedList<Element>()
-            : Collections.<Element>emptyList();
+        List<Element> newInheritedParams = inheritResourceParams ? new ArrayList<>() : Collections.emptyList();
         for (Element el : allParamElements) {
             boolean isResourceLevelParam = RESOURCE_LEVEL_PARAMS.contains(el.getAttribute("style"));
             if (isSubresourceMethod && isResourceLevelParam) {
@@ -1099,10 +1028,10 @@ public class SourceGenerator {
 
     private void generateEmptyMethodBody(StringBuilder sbCode, boolean responseTypeAvailable) {
         sbCode.append(" {");
-        sbCode.append(getLineSep()).append(TAB).append(TAB);
-        sbCode.append("//TODO: implement").append(getLineSep()).append(TAB);
+        sbCode.append(lineSeparator).append(TAB).append(TAB);
+        sbCode.append("//TODO: implement").append(lineSeparator).append(TAB);
         if (responseTypeAvailable) {
-            sbCode.append(TAB).append("return null;").append(getLineSep()).append(TAB);
+            sbCode.append(TAB).append("return null;").append(lineSeparator).append(TAB);
         }
         sbCode.append('}');
     }
@@ -1134,7 +1063,7 @@ public class SourceGenerator {
         }
         return repElements.isEmpty() ? null : repElements.get(0);
     }
-    //CHECKSTYLE:OFF
+    //CHECKSTYLE:OFF: ParameterNumber
     private boolean writeResponseType(List<Element> responseEls,
                                       Element requestRepWithElement,
                                       StringBuilder sbCode,
@@ -1143,21 +1072,21 @@ public class SourceGenerator {
                                       ContextInfo info,
                                       boolean responseRequired,
                                       boolean suspendedAsync) {
-    //CHECKSTYLE:ON
+    //CHECKSTYLE:ON: ParameterNumber
         Element okResponse = !suspendedAsync ? getOKResponse(responseEls) : null;
 
-        List<Element> repElements = null;
+        final List<Element> repElements;
         if (okResponse != null) {
             if (sbRespDocs != null) {
                 writeMethodResponseDocs(okResponse, sbRespDocs);
             }
             repElements = getWadlElements(okResponse, "representation");
         } else {
-            repElements = CastUtils.cast(Collections.emptyList(), Element.class);
+            repElements = Collections.emptyList();
         }
         if (!suspendedAsync && !responseRequired && responseEls.size() == 1 && generateResponseIfHeadersSet) {
             List<Element> outResponseParamElements =
-                getParameters(responseEls.get(0), Collections.<Element>emptyList(), false);
+                getParameters(responseEls.get(0), Collections.emptyList(), false);
             if (!outResponseParamElements.isEmpty()) {
                 writeJaxrResponse(sbCode, imports);
                 return true;
@@ -1173,7 +1102,7 @@ public class SourceGenerator {
         }
         String elementType = null;
         if (!responseRequired) {
-            List<Element> responseRepWithElements = new LinkedList<>();
+            List<Element> responseRepWithElements = new ArrayList<>();
             getRepsWithElements(repElements, responseRepWithElements, info.getGrammarInfo());
 
             Element responseRepWithElement = null;
@@ -1199,7 +1128,7 @@ public class SourceGenerator {
                                info, imports, true);
         }
         if (elementType != null) {
-            sbCode.append(elementType).append(' ');
+            sbCode.append(responseWrapper.wrap(elementType, imports)).append(' ');
         } else {
             writeJaxrResponse(sbCode, imports);
         }
@@ -1208,7 +1137,7 @@ public class SourceGenerator {
 
     private void writeJaxrResponse(StringBuilder sbCode, Set<String> imports) {
         addImport(imports, Response.class.getName());
-        sbCode.append(Response.class.getSimpleName()).append(' ');
+        sbCode.append(responseWrapper.wrap(Response.class, imports)).append(' ');
     }
 
     private static Element getOKResponse(List<Element> responseEls) {
@@ -1243,12 +1172,12 @@ public class SourceGenerator {
 
     private void writeSubResponseType(boolean recursive, String ns, String localName,
                                       StringBuilder sbCode, Set<String> imports) {
-        if (!recursive && ns.length() > 0) {
-            addImport(imports, ns + "." + localName);
+        if (!recursive && !ns.isEmpty()) {
+            addImport(imports, ns + '.' + localName);
         }
         sbCode.append(localName).append(' ');
     }
-    //CHECKSTYLE:OFF
+    //CHECKSTYLE:OFF: ParameterNumber
     private void writeRequestTypes(Element requestEl, //NOPMD
                                    String classPackage,
                                    Element repElement,
@@ -1259,7 +1188,7 @@ public class SourceGenerator {
                                    Set<String> imports,
                                    ContextInfo info,
                                    boolean suspendedAsync) {
-    //CHECKSTYLE:ON
+    //CHECKSTYLE:ON: ParameterNumber
         boolean form = false;
         boolean multipart = false;
         boolean formOrMultipartParamsAvailable = false;
@@ -1299,16 +1228,16 @@ public class SourceGenerator {
             if (writeAnnotations) {
                 String required = paramEl.getAttribute("required");
                 if (Multipart.class.equals(paramAnn) && "false".equals(required)) {
-                    writeAnnotation(sbCode, imports, paramAnn, null, false, false);
-                    sbCode.append("(value = \"").append(name).append("\", required = false").append(')');
+                    writeAnnotation(sbCode, imports, paramAnn, null)
+                        .append("(value = \"").append(name).append("\", required = false").append(')');
                 } else {
-                    writeAnnotation(sbCode, imports, paramAnn, name, false, false);
+                    writeAnnotation(sbCode, imports, paramAnn, name);
                 }
                 sbCode.append(' ');
                 String defaultVal = paramEl.getAttribute("default");
-                if (defaultVal.length() > 0) {
-                    writeAnnotation(sbCode, imports, DefaultValue.class, defaultVal, false, false);
-                    sbCode.append(' ');
+                if (!defaultVal.isEmpty()) {
+                    writeAnnotation(sbCode, imports, DefaultValue.class, defaultVal)
+                        .append(' ');
                 }
             }
             boolean isRepeating = isRepeatingParam(paramEl);
@@ -1326,12 +1255,12 @@ public class SourceGenerator {
             } else {
                 paramName = name.replaceAll("[:\\.\\-]", "_");
             }
-            String javaParamName = firstCharToLowerCase(paramName);
+            String javaParamName = StringUtils.uncapitalize(paramName);
             sbCode.append(type).append(' ').append(javaParamName);
             if (i + 1 < inParamEls.size()) {
                 sbCode.append(", ");
                 if (i + 1 >= 4 && ((i + 1) % 4) == 0) {
-                    sbCode.append(getLineSep()).append(TAB).append(TAB).append(TAB).append(TAB);
+                    sbCode.append(lineSeparator).append(TAB).append(TAB).append(TAB).append(TAB);
                 }
             }
             if (sbMethodDocs != null) {
@@ -1394,8 +1323,8 @@ public class SourceGenerator {
                 sbCode.append(", ");
             }
             if (writeAnnotations) {
-                addImport(imports, Suspended.class.getName());
-                sbCode.append('@').append(Suspended.class.getSimpleName()).append(' ');
+                writeAnnotation(sbCode, imports, Suspended.class, null)
+                    .append(' ');
             }
             addImport(imports, AsyncResponse.class.getName());
             sbCode.append(AsyncResponse.class.getSimpleName()).append(' ').append("async");
@@ -1427,12 +1356,7 @@ public class SourceGenerator {
     }
 
     private void generateEnumClass(String clsName, List<Element> options, File src, String classPackage) {
-        StringBuilder sbImports = new StringBuilder(64);
         StringBuilder sbCode = new StringBuilder(512);
-        sbImports.append(getClassComment()).append(getLineSep());
-        sbImports.append("package ").append(classPackage)
-            .append(';').append(getLineSep()).append(getLineSep());
-
         sbCode.append("public enum ").append(clsName);
         openBlock(sbCode);
 
@@ -1445,13 +1369,13 @@ public class SourceGenerator {
             } else {
                 sbCode.append(';');
             }
-            sbCode.append(getLineSep());
+            sbCode.append(lineSeparator);
         }
 
-        sbCode.append(TAB).append("private String value;").append(getLineSep());
+        sbCode.append(TAB).append("private String value;").append(lineSeparator);
         sbCode.append(TAB).append("private ").append(clsName).append("(String v)");
         openBlock(sbCode);
-        tab(sbCode, 2).append("this.value = v;").append(getLineSep());
+        tab(sbCode, 2).append("this.value = v;").append(lineSeparator);
         tabCloseBlock(sbCode, 1);
 
         sbCode.append(TAB).append("public static ")
@@ -1468,15 +1392,15 @@ public class SourceGenerator {
         sbCode.append("if (value.equalsIgnoreCase(v.value))");
         openBlock(sbCode);
         tab(sbCode, 5);
-        sbCode.append("return v;").append(getLineSep());
+        sbCode.append("return v;").append(lineSeparator);
         tabCloseBlock(sbCode, 4);
         tabCloseBlock(sbCode, 3);
         tabCloseBlock(sbCode, 2);
         tab(sbCode, 2);
-        sbCode.append("throw new IllegalArgumentException();").append(getLineSep());
+        sbCode.append("throw new IllegalArgumentException();").append(lineSeparator);
         tabCloseBlock(sbCode, 1);
         sbCode.append('}');
-        createJavaSourceFile(src, new QName(classPackage, clsName), sbCode, sbImports, false);
+        createJavaSourceFile(src, classPackage, clsName, sbCode, Collections.emptySet(), false);
     }
 
     private static StringBuilder tab(StringBuilder sb, int count) {
@@ -1487,16 +1411,16 @@ public class SourceGenerator {
     }
 
     private StringBuilder tabCloseBlock(StringBuilder sb, int count) {
-        tab(sb, count).append('}').append(getLineSep());
+        tab(sb, count).append('}').append(lineSeparator);
         return sb;
     }
 
     private StringBuilder openBlock(StringBuilder sb) {
-        sb.append(" {").append(getLineSep());
+        sb.append(" {").append(lineSeparator);
         return sb;
     }
 
-    private String getTypicalClassName(String name) {
+    private static String getTypicalClassName(String name) {
         String theName = name.toUpperCase();
         if (theName.length() == 1) {
             return theName;
@@ -1524,7 +1448,7 @@ public class SourceGenerator {
     private String getPrimitiveType(Element paramEl, ContextInfo info, Set<String> imports) {
         final String defaultValue = "String";
         String type = paramEl.getAttribute("type");
-        if (type.length() == 0) {
+        if (type.isEmpty()) {
             return defaultValue;
         }
 
@@ -1613,7 +1537,7 @@ public class SourceGenerator {
         }
         String elementRef = repElement.getAttribute("element");
 
-        if (elementRef.length() > 0) {
+        if (!elementRef.isEmpty()) {
             String[] pair = elementRef.split(":");
             if (pair.length == 2
                 || pair.length == 1 && info.getGrammarInfo().isSchemaWithoutTargetNamespace()) {
@@ -1664,12 +1588,12 @@ public class SourceGenerator {
                     if (namespace != null) {
                         packageName = getPackageFromNamespace(namespace);
                         clsName = matchClassName(typeClassNames, packageName, elementTypeName);
-                        //CHECKSTYLE:OFF
+                        //CHECKSTYLE:OFF: NestedIfDepth
                         if (clsName == null && jaxbClassNameSuffix != null) {
                             clsName = matchClassName(typeClassNames, packageName,
                                                      elementTypeName + jaxbClassNameSuffix);
                         }
-                        //CHECKSTYLE:ON
+                        //CHECKSTYLE:ON: NestedIfDepth
                     }
                 }
 
@@ -1693,8 +1617,6 @@ public class SourceGenerator {
         }
         return null;
     }
-
-
 
     private void writeFormatAnnotations(List<Element> repElements, StringBuilder sbCode,
                                         Set<String> imports,
@@ -1734,7 +1656,7 @@ public class SourceGenerator {
             sbCode.append(" }");
         }
         sbCode.append(')');
-        sbCode.append(getLineSep()).append(TAB);
+        sbCode.append(lineSeparator).append(TAB);
     }
 
     private void writeThrows(List<Element> responseEls, StringBuilder sbCode, StringBuilder sbMethodDocs,
@@ -1763,37 +1685,48 @@ public class SourceGenerator {
         }
     }
 
-    private void createJavaSourceFile(File src, QName qname, StringBuilder sbCode, StringBuilder sbImports,
-                                      boolean serviceClass) {
-        String content = sbImports.toString() + getLineSep() + sbCode.toString();
-
-        String namespace = qname.getNamespaceURI();
+    private void createJavaSourceFile(File src, String classPackage, String className, StringBuilder sbCode,
+        Set<String> imports, boolean serviceClass) {
         if (serviceClass) {
-            generatedServiceClasses.add(namespace + "." + qname.getLocalPart());
+            generatedServiceClasses.add(classPackage + '.' + className);
         }
 
-        namespace = namespace.replace(".", getFileSep());
+        java.nio.file.Path currentDir = src.toPath().resolve(classPackage.replace('.', File.separatorChar));
+        try (Writer writer = Files.newBufferedWriter(
+            Files.createDirectories(currentDir).resolve(className + ".java"),
+            encoding == null ? StandardCharsets.UTF_8 : Charset.forName(encoding))) {
 
-        File currentDir = new File(src.getAbsolutePath(), namespace);
-        currentDir.mkdirs();
-        File file = new File(currentDir.getAbsolutePath(), qname.getLocalPart() + ".java");
+            writer.write(getClassComment());
+            writer.write(lineSeparator);
 
-        try {
-            file.createNewFile();
-            try (Writer writer = new OutputStreamWriter(Files.newOutputStream(file.toPath()),
-                                                encoding == null ? StandardCharsets.UTF_8.name() : encoding)) {
-                writer.write(content);
-                writer.flush();
+            writer.write("package ");
+            writer.write(classPackage);
+            writer.write(';');
+            writer.write(lineSeparator);
+            writer.write(lineSeparator);
+
+            for (String clsName : imports) {
+                int index = clsName.lastIndexOf('.');
+                if (index != -1 && clsName.substring(0, index).equals(classPackage)) {
+                    continue;
+                }
+                writer.write("import ");
+                writer.write(clsName);
+                writer.write(';');
+                writer.write(lineSeparator);
             }
-        } catch (FileNotFoundException ex) {
-            LOG.warning(file.getAbsolutePath() + " is not found");
+            writer.write(lineSeparator);
+
+            writer.write(sbCode.toString());
+        } catch (java.nio.file.NoSuchFileException ex) {
+            LOG.warning(ex.getMessage() + " is not found");
         } catch (IOException ex) {
-            LOG.warning("Problem writing into " + file.getAbsolutePath());
+            LOG.warning("Problem writing into " + ex.getMessage());
         }
     }
 
-    private Application readWadl(String wadl, String docPath) {
-        Element wadlElement = readXmlDocument(new StringReader(wadl));
+    private Application readWadl() {
+        Element wadlElement = readDocument(wadlPath);
         if (validateWadl) {
             final WadlValidationErrorHandler errorHandler = new WadlValidationErrorHandler();
             try {
@@ -1810,15 +1743,7 @@ public class SourceGenerator {
                 throw new ValidationException("WADL document is not valid.");
             }
         }
-        return new Application(wadlElement, docPath);
-    }
-
-    private Element readXmlDocument(Reader reader) {
-        try {
-            return StaxUtils.read(new InputSource(reader)).getDocumentElement();
-        } catch (Exception ex) {
-            throw new IllegalStateException("Unable to read wadl", ex);
-        }
+        return new Application(wadlElement, wadlPath);
     }
 
     private void generateClassesFromSchema(JCodeModel codeModel, File src) {
@@ -1870,8 +1795,7 @@ public class SourceGenerator {
                     schemaURI = href;
                 }
             }
-            schemas.add(createSchemaInfo(readIncludedDocument(schemaURI),
-                                            schemaURI));
+            schemas.add(createSchemaInfo(readDocument(schemaURI), schemaURI));
         }
         return schemas;
     }
@@ -1913,22 +1837,23 @@ public class SourceGenerator {
         return null;
     }
 
-    private Element readIncludedDocument(String href) {
-
+    private Element readDocument(String href) {
         try {
             InputStream is = null;
             if (!href.startsWith("http")) {
                 is = ResourceUtils.getResourceStream(href, bus);
             }
             if (is == null) {
-                URL url = URI.create(href).toURL();
+                URL url = new URL(href);
                 if (href.startsWith("https") && authentication != null) {
                     is = SecureConnectionHelper.getStreamFromSecureConnection(url, authentication);
                 } else {
                     is = url.openStream();
                 }
             }
-            return readXmlDocument(new InputStreamReader(is, StandardCharsets.UTF_8));
+            try (Reader reader = new InputStreamReader(is, StandardCharsets.UTF_8)) {
+                return StaxUtils.read(new InputSource(reader)).getDocumentElement();
+            }
         } catch (Exception ex) {
             throw new RuntimeException("Resource " + href + " can not be read");
         }
@@ -2004,8 +1929,7 @@ public class SourceGenerator {
     }
 
     private Set<String> createImports() {
-        return importsComparator == null ? new TreeSet<String>(new DefaultImportsComparator())
-            : new TreeSet<String>(importsComparator);
+        return new TreeSet<String>(importsComparator == null ? new DefaultImportsComparator() : importsComparator);
     }
 
     public void setGenerateInterfaces(boolean generateInterfaces) {
@@ -2100,6 +2024,11 @@ public class SourceGenerator {
         this.jaxbClassNameSuffix = jaxbClassNameSuffix;
     }
 
+    public void setRx(String rx) {
+        this.rx = rx;
+        this.responseWrapper = ResponseWrapper.create(rx);
+    }
+
     private static class GrammarInfo {
         private Map<String, String> nsMap = new HashMap<>();
         private Map<String, String> elementTypeMap = new HashMap<>();
@@ -2166,7 +2095,7 @@ public class SourceGenerator {
         }
     }
 
-    private class Application {
+    private static class Application {
         private Element appElement;
         private String wadlPath;
         Application(Element appElement, String wadlPath) {
@@ -2190,7 +2119,7 @@ public class SourceGenerator {
         private Set<String> resourceClassNames = new HashSet<>();
         private Application rootApp;
         private File srcDir;
-        private List<Element> inheritedParams = new LinkedList<>();
+        private List<Element> inheritedParams = new ArrayList<>();
 
         ContextInfo(Application rootApp,
                     File srcDir,
